--- a/AchrefProject/composer.json
+++ b/AchrefProject/composer.json
@@ -22,7 +22,8 @@
         "symfony/security-csrf": "5.4.*",
         "symfony/twig-bundle": "5.4.*",
         "symfony/validator": "5.4.*",
-        "symfony/yaml": "5.4.*"
+        "symfony/yaml": "5.4.*",
+        "twilio/sdk": "^7.3"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.48"
