--- a/UserCrud/.env
+++ b/UserCrud/.env
@@ -31,11 +31,23 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/TicTacGo?"
 
 ###> symfony/messenger ###
 # Choose one of the transports below
-# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
-# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+#MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+#MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+#MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+#MESSENGER_TRANSPORT_DSN=gmail+smtp://rayenzdhraief:majeyojfmcgmzwsg@default?encryption=ssl&auth_mode=oauth
+#MESSENGER_TRANSPORT_DSN=null://localhost
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://rayenzdhraief@gmail.com:majeyojfmcgmzwsg@default?verify_peer=0
+###< symfony/google-mailer ###
+
+###> knplabs/knp-snappy-bundle ###
+WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
+WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
+###< knplabs/knp-snappy-bundle ###
