--- a/UserCrud/composer.json
+++ b/UserCrud/composer.json
@@ -11,9 +11,17 @@
         "doctrine/doctrine-bundle": "^2.9",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
+        "dompdf/dompdf": "^2.0",
+        "knplabs/knp-snappy-bundle": "^1.9",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.16",
+        "qipsius/tcpdf-bundle": "*",
+        "scheb/2fa-bundle": "^5.3",
+        "scheb/2fa-google-authenticator": "^5.3",
+        "scheb/2fa-qr-code": "^5.3",
+        "scheb/two-factor-bundle": "*",
         "sensio/framework-extra-bundle": "^6.1",
+        "spipu/html2pdf": "^4.6",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/doctrine-messenger": "5.4.*",
@@ -22,6 +30,7 @@
         "symfony/flex": "^1.17|^2",
         "symfony/form": "5.4.*",
         "symfony/framework-bundle": "5.4.*",
+        "symfony/google-mailer": "5.4.*",
         "symfony/http-client": "5.4.*",
         "symfony/http-kernel": "5.4.*",
         "symfony/intl": "5.4.*",
