--- a/UserCrud/config/routes.yaml
+++ b/UserCrud/config/routes.yaml
@@ -1,3 +1,8 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+# config/routes.yaml
+2fa_login:
+    path: /2fa
+    controller: App\Controller\SecurityController::check2fa
+
+2fa_login_check:
+    path: /2fa_check
+
