--- a/GestionP/.env
+++ b/GestionP/.env
@@ -40,3 +40,10 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+
+
+###> nzo/url-encryptor-bundle ###
+NZO_ENCRYPTOR_SECRET=change_me
+NZO_ENCRYPTOR_IV=change_me
+###< nzo/url-encryptor-bundle ###
