--- a/GestionP/config/services.yaml
+++ b/GestionP/config/services.yaml
@@ -3,14 +3,17 @@
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
-parameters:
 
+
+
+
+    
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-
+        public: false
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
@@ -20,7 +23,23 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\Provider\CustomRouteProvider:
+        tags: [ { name: cmf_routing.route_provider } ]
+
+# config/services.yaml
+
+    App\Logger\LogglyHandler:
+        class: Monolog\Handler\SocketHandler
+        arguments: ['tcp://logs-01.loggly.com:514', 200]
+   
+    
+    
+   
+
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+   
+
 parameters:
     locale: 'fr'
